--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,14 @@ body{
 }
 h1{
   color: white;
+  
 }
 #App{
   padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100vw;
   height: 100vh;
   gap: 50px;
@@ -29,7 +30,7 @@ main{
   width: 100%;
   padding: 20px;
 }
-#app header{
+#App header{
   height: 200px;
   display: flex;
   align-items: center;
